--- a/style/style.css
+++ b/style/style.css
@@ -72,7 +72,68 @@ nav li a{
 /* header section end */
 
 /* goat section start */
+.goat{
+    display: flex;
+    justify-content: space-around;
+    background-image: url('/images/Group\ 14.png');
+}
+.goat-left h3{
+    color: #0B0223;
+    text-align: center;
+    font-size: 48px;
+    font-weight: 600;
+    text-transform: uppercase;
+    margin: 0;
+    margin-top: 148px;
+}
+.goat-left h1{
+    color: var(--linear);
+    text-align: center;
+    font-size: 95px;
+    font-weight: 800;
+    text-transform: uppercase;
+    margin: 0;
+}
+.goat-left p{
 
+    color: #534C64;
+    text-align: left;
+    text-transform: lowercase;
+    font-size: 20px;
+    font-weight: 500;
+}
+.goat-left img{
+    width: 24px;
+    height: 24px;
+    margin-right: 5px;
+}
+.goat-btn{
+    display: flex;
+    justify-content: space-between;
+}
+
+.goat-btn-left{
+    color: #FFFFFF;
+    background-color: var(--linear);
+    display: inline-flex;
+    padding: 21px 40px;
+    align-items: flex-start;
+    gap: 10px;
+    border-radius: 48px;
+    border: none;
+    cursor: pointer;
+}
+.goat-btn-right{
+    color: #FFFFFF;
+    background-color: #4EC5F7;
+    display: inline-flex;
+    padding: 21px 40px;
+    align-items: flex-start;
+    gap: 10px;
+    border-radius: 48px;
+    border: none;
+    cursor: pointer;
+}
 /* goat section end */
 
 
@@ -115,5 +176,10 @@ nav li a{
         flex-wrap: wrap;
         margin: 0;
         padding-bottom: 20px;
+    }
+    .goat{
+        flex-direction: column;
+        justify-content: center;
+        padding: 20px;
     }
 }
