--- a/style/style.css
+++ b/style/style.css
@@ -75,9 +75,11 @@ nav li a{
 .goat{
     display: flex;
     justify-content: space-around;
-    background-image: url('/images/Group\ 14.png');
-    background-position: left;
-    background-repeat: no-repeat;
+    background-color: #FFFFFF;
+}
+.goat-left{
+    background-image: url("/images/Group\ 14.png");
+    background-position: 100%;
 }
 .goat-left h3{
     color: #0B0223;
